Prevent horizontal scroll bar

--- a/main.css
+++ b/main.css
@@ -86,7 +86,7 @@ body {
 	position: relative;
 	height: 0px;
 	float: right;
-	width: 151px;
+	width: 152px;
 }
 
 #sg-export-btn {
